--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ main {
     padding: 0 1em 0 2em;
     box-sizing: border-box;
 
-    #title-image{
+    #logo{
         grid-column: 1;
         grid-row: 1;
         background-image: url(../images/title.svg);
@@ -479,9 +479,6 @@ input {
     border: solid 2px #e43636;
 
     transition: all 0.3s ease-in-out;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out;
 }
 
 textarea {
@@ -496,9 +493,6 @@ textarea {
     border: solid 2px #e43636;
 
     transition: all 0.3s ease-in-out;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out;
 
     margin: 0;
     font-family: "Roboto", sans-serif;
@@ -609,7 +603,7 @@ textarea {
         gap: 1.5em;
     }
 
-    #title-image{
+    #logo{
         margin-top: 0.75em;
         margin-bottom: 0.75em;
     }
@@ -617,7 +611,7 @@ textarea {
 
 @media (max-width: 700px) {
     #fullheader {
-        #title-image{
+        #logo{
             background-image: url(../images/favicon.svg);
             max-width: 5.5em;
             min-width: 50px;
